apps/overlap/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: overlap
  labels:
    environment: production
