apps/overlap/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: overlap-web
  namespace: overlap
spec:
  selector:
    app: overlap-web
  ports:
    - name: http
      port: 8080
      targetPort: http
